--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "antd": "^4.7.0",
     "axios": "^0.20.0",
     "craco-less": "^1.17.0",
-    "moment": "^2.27.0",
+    "localforage": "^1.9.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-live-clock": "^5.0.9",
+    "react-moment": "^1.0.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
