--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^11.1.0",
     "antd": "^4.7.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "craco-less": "^1.17.0",
     "localforage": "^1.9.0",
     "moment": "^2.29.1",
@@ -21,7 +21,7 @@
     "react-moment": "^1.0.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0"
   },
